# walkie-agent-v2

./: .env.example  .gitignore  0349_run_01.txt  CLAUDE.md  README.md  RERUN.md  WALKIE_GRAPHS.md  config.toml  llm_eval_sonnet.md  llm_matrix_think_off.md  llm_matrix_think_on.md  main.py  perception.json  pyproject.toml  restaurant_task.py  run.sh  run_local_eval.sh  test_captioning.py  test_get_tilt.py  test_goto.py  test_local_llm.py  test_o3d_cuda.py  test_object_detection.py  test_object_detection_mask.py  test_object_segmentation.py  test_pose_estimation.py  test_robot_head.py  test_robot_microphone.py  test_robot_object_detection.py  walkie_config.py  world.toml
agents/actuator_agent/: __init__.py  agent.py  prompts.py  tools.py
agents/core/: __init__.py  agent.py  object_memory.py  robot_context.py  tool_decorators.py
agents/database_agent/: __init__.py  agent.py  prompts.py  tools.py
agents/human_agent/: __init__.py  agent.py  prompts.py  tools.py
agents/middleware/: __init__.py  robot_state.py  sequential_tool.py  todo.py
agents/vision_agent/: __init__.py  agent.py  detect.py  prompts.py  tools.py
agents/walkie_agent/: __init__.py  agent.py  prompts.py  tools.py
benchmarks/yoloe/: .gitignore  README.md  fetch_dataset.py  incheon2026_objects.txt  requirements.txt  run_bench.py  run_video_bench.py
chroma_db/: chroma.sqlite3
client/: __init__.py  appearance.py  base.py  face_recognition.py  grasp.py  image.py  image_caption.py  image_embed.py  object_detection.py  pose_estimation.py  stt.py  tts.py  walkie_client.py
commander/: .gitignore  README.md  main.py  pyproject.toml
commander/walkie_runner/: __init__.py  pages.py  process_manager.py  registry.py
db/: __init__.py  walkie_db.py
docs/: GPSR_DESIGN.md  GPSR_ONROBOT_RUNBOOK.md  MAP_LOCATIONS.md  RERUN.md  RESTAURANT_DESIGN.md  SCORING.md  WALKIE_GRAPHS.md  WALKIE_WORLD.md  eic_human_review.md  human_recognition_design.md  human_recognition_features.md  scene_perception_design.md  scene_perception_design.th.md  walkie_ai_server_appearance_service.md  walkie_ai_server_face_service.md
graph_debug/: grasp_vv_fixture.npz  grasp_vv_fixture.results.json
human_interfaces/: microphone.py
interfaces/: speaker.py  walkie_interface.py
interfaces/devices/: camera.py  microphone.py  speaker.py
interfaces/perception/: __init__.py  surfaces.py
logs/: GPSR_log.txt
manual_tests/: __init__.py  calibrate_door.py  eval_llm_compare.py  grasp_virtual_view.py  probe_local_latency.py  run_stub_agent.py  test_base_creep.py  test_captioning.py  test_graphs_live.py  test_grasp.py  test_hri_dryrun.py  test_human_recognition.py  test_lidar_follow_viz.py  test_object_segmentation.py  test_pick_and_place.py  test_pose_estimation.py  test_restaurant_dryrun.py  test_restaurant_grasp.py  test_restaurant_phase0_dryrun.py  test_robot_head.py  test_robot_microphone.py  test_robot_object_detection.py
perception/: README.md  __init__.py  dedup.py  embedders.py  gestures.py  lifters.py  loop.py  mocks.py  people_store.py  pipeline.py  store.py  types.py  vector_db.py
services/: __init__.py  explore.py  perception.py  scene_perception.py
services/realtime_explore/: __init__.py  associate.py  buffer.py  builder.py  config.toml  fusion.py  pcd_ops.py  poses.py  service.py  snapshot.py  viz.py
services/viz/: __init__.py  config.toml  session.py
services/walkie_graphs/: __init__.py  associate.py  background.py  builder.py  camera_snapshot.py  capture.py  carve.py  config.toml  dbscan.py  fusion.py  geometry.py  memory.py  pcd_ops.py  poses.py  relations.py  scene.py  service.py  service_v2.py  tsdf.py  viz.py
tasks/: README.md  __init__.py  _run.sh  base.py  common.py  manipulation.py  runtime.py  scoring.py
tasks/DoingLaundry/: README.md  config.toml  prompt.md  run.sh
tasks/Final/: __init__.py  config.toml  prompts.py  run.py  scoring.py  skills.py  subtasks.py
tasks/Finals/: README.md  config.toml  prompt.md  run.sh
tasks/GPSR/: CHECKLIST.md  README.md  config.toml  dispatch.py  gestures.py  parse.py  plan.py  prompt.md  prompts.py  run.py  run.sh  schedule.py  scoring.py  skills.py  subtasks.py  tracking.py  world.py  world.rulebook_2026.toml  world.test_arena.toml  world.toml
tasks/HRI/: README.md  config.toml  identity.py  prompt.md  prompts.py  run.py  run.sh  scoring.py  skills.py  subtasks.py
tasks/Inspection/: __init__.py  config.toml  prompts.py  run.py  skills.py  subtasks.py
tasks/Laundry/: config.toml  prompts.py  run.py  scoring.py  skills.py  subtasks.py
tasks/OpenChallenge/: README.md  config.toml  prompt.md  run.sh
tasks/PickAndPlace/: CHECKLIST.md  README.md  config.toml  prompt.md  prompts.py  run.py  run.sh  (+3 more)
tests/: gpsr_command_corpus.txt  llm_harness.py  test_appearance_client.py  test_chroma_viewer_people.py  test_creep_base_relative.py  test_embedders.py  test_extract_parse.py  test_face_recognition_client.py  test_final_task.py  test_gestures.py  test_gpsr_coverage.py  test_gpsr_detect_floor.py  test_gpsr_dispatch.py  test_gpsr_gen_corpus.py  test_gpsr_generator_coverage.py  test_gpsr_gestures.py  test_gpsr_hardening.py  test_gpsr_integration.py  test_gpsr_interleave_safety.py  test_gpsr_nav_door.py  test_gpsr_parse.py  test_gpsr_recovery.py  test_gpsr_schedule.py  test_gpsr_split.py  test_gpsr_teach_poses.py  test_gpsr_tracking.py  test_gpsr_verify.py  test_grasp_cleanup.py  test_grasp_client.py  test_grasp_detect.py  test_grasp_geometry.py  test_grasp_rerank.py  test_grasp_virtual_view.py  test_held_object_blackboard.py  test_hri_identity.py  test_hri_seating.py  test_hri_slice.py  test_human_appearance_tools.py  test_human_face_tools.py  test_human_seat_gaze_tools.py  (+27 more)
tools/: __init__.py  chroma_viewer.py  db_doctor.py  reset_db.py  scene_explore.py  seed_mock_chroma.py
walkie_graphs/: __init__.py  dbscan.py  fusion.py  geometry.py  memory.py  service.py  viz.py
walkie_world/: __init__.py  config.py  config.toml  world.py
(+114 files in other folders)
