[project]
name = "walkie-agent-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5",
    "flask>=3.1.3",
    "langchain>=1.2.14",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "numpy>=2.4.4",
    "onnxruntime>=1.24.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "silero-vad>=6.2.1",
    "sounddevice>=0.5.5",
    "walkie-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "requests>=2.32.0",
]
# In-process CLIP for SCENE_EMBED_BACKEND=local (no walkie-ai-server dependency
# for embeddings). Install with `uv sync --extra clip`. NOTE: on an RTX 5090
# (Blackwell / sm_120) you need a CUDA 12.8 torch build — install torch from the
# cu128 index, e.g. `uv pip install torch --index-url https://download.pytorch.org/whl/cu128`.
clip = [
    "torch>=2.7",
    "transformers>=4.45",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
walkie-sdk = { git = "https://github.com/EIC-Robocup-2026/walkie-sdk.git" }
